@@ -490,11 +490,17 @@ class RegularFieldConditionHandler(OperatorConditionHandlerMixin,
     def description(self, user):
         finfo = self.field_info
         values = self._verbose_values
+        operator = self.get_operator(self._operator_id)
 
         if values is None:
             last_field = finfo[-1]
 
-            if isinstance(last_field, (ForeignKey, ManyToManyField)):
+            # if isinstance(last_field, (ForeignKey, ManyToManyField)):
+            if (
+                isinstance(last_field, (ForeignKey, ManyToManyField))
+                # TODO: meh; need a better API in operators
+                and not isinstance(operator, operators.BooleanOperatorBase)
+            ):
                 values = []
                 pks = []
 
@@ -542,7 +548,11 @@ class RegularFieldConditionHandler(OperatorConditionHandlerMixin,
 
             self._verbose_values = values
 
-        return self.get_operator(self._operator_id).description(
+        # return self.get_operator(self._operator_id).description(
+        #     field_vname=finfo.verbose_name,
+        #     values=values,
+        # )
+        return operator.description(
             field_vname=finfo.verbose_name,
             values=values,
         )
